--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<?php
-
-    require_once("database.php");
-    require_once("models/articles.php");
-
-    $link = db_connect();
-    $articles = articles_all($link);
-    
-    include ("views/articles.php");
-?>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Сторінка на HTML</title>
+</head>
+<body>
+<h1>Заголовок</h1>
+<p>simple text</p>
+</body>
+</html>
