--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
-<head>
-<meta charset="utf-8">
-<title>Сторінка на HTML</title>
-</head>
-<body>
-<h1>Заголовок</h1>
-<p>simple text</p>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>This is an example of using GitHub Pages</h1>
+        <p>Simple string text</p>
+    </body>
 </html>
