додав файл для Миська

--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>This is an example of using GitHub Pages</h1>
-        <p>Simple string text</p>
+<!--        <h1>This is an example of using GitHub Pages</h1>-->
+<!--        <p>Simple string text</p>-->
+        <h1>По цьому посиланню ти можеш скачати сайт в архіві:</h1>
+        <p><a href="site.rar" download>Завантажити файл</a></p>
+        <p>Після розархівування відкривати:</p>
+        <ul>
+            <li>index.html - це головна</li>
+            <li>services.html - це сторінка з послугами</li>
+            <li>about.html - це сторінка про компанію</li>
+            <li>services.html - це сторінка з контактами</li>
+        </ul>
+        <p>Папки:</p>
+        <ul>
+            <li>css та sass - папки з таблицями стилів css</li>
+            <li>fonts - це папка з шрифтами</li>
+            <li>images - це папка з зображеннями</li>
+            <li>js - скрипти</li>
+            <li>favicon.ico - іконка для сайту</li>
+        </ul>
     </body>
 </html>
