--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
     <body>
 <!--        <h1>This is an example of using GitHub Pages</h1>-->
 <!--        <p>Simple string text</p>-->
-        <h1>По цьому посиланню ти можеш скачати сайт в архіві:</h1>
+        <h1>По цьому посиланню можна скачати архів з вихідним кодом і exe-шниками:</h1>
         <p><a href="site.rar" download>Завантажити файл</a></p>
-        <p>Після розархівування відкривати:</p>
+        <p>В архіві можна знайти:</p>
         <ul>
-            <li>index.html - це головна</li>
-            <li>services.html - це сторінка з послугами</li>
-            <li>about.html - це сторінка про компанію</li>
-            <li>services.html - це сторінка з контактами</li>
+            <li>*.sln - це файл проекту Visual Studio</li>
+            <li>readme.txt - це звіт по програмі</li>
         </ul>
         <p>Папки:</p>
         <ul>
-            <li>css та sass - папки з таблицями стилів css</li>
-            <li>fonts - це папка з шрифтами</li>
-            <li>images - це папка з зображеннями</li>
-            <li>js - скрипти</li>
-            <li>favicon.ico - іконка для сайту</li>
+            <li>Release - містить exe файли</li>
+            <li>NumericSystems - містить код</li>
         </ul>
     </body>
 </html>
