--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--        <h1>This is an example of using GitHub Pages</h1>-->
 <!--        <p>Simple string text</p>-->
         <h1>По цьому посиланню можна скачати архів з вихідним кодом і exe-шниками:</h1>
-        <p><a href="site.rar" download>Завантажити файл</a></p>
+        <p><a href="NumericSystems.rar" download>Завантажити файл</a></p>
         <p>В архіві можна знайти:</p>
         <ul>
             <li>*.sln - це файл проекту Visual Studio</li>
